# pbg-emitters

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
docs/plans/: 2026-06-09-run-reader-increment-b1.md  2026-06-10-runreader-catalog-subproject-2.md
pbg_emitters/: __init__.py  lifecycle.py  parquet_emitter.py  run_reader.py  sqlite_emitter.py
pbg_emitters/xarray_emitter/: __init__.py  storage.py
tests/: conftest.py  test_lifecycle.py  test_parquet_emitter.py  test_run_reader.py  test_run_reader_catalog.py  test_sqlite_emitter.py  test_xarray_emitter.py
