[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pbg-emitters"
version = "0.1.0"
description = "Focused emitter library for process-bigraph composites — SQLite, Parquet, and beyond"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "process-bigraph>=1.4.12",
    "bigraph-schema",
    "numpy",
]

[project.optional-dependencies]
# SQLite uses Python's stdlib ``sqlite3`` — the group exists for symmetry
# with the other extras so callers can write ``pip install pbg-emitters[sqlite]``.
sqlite = []
parquet = [
    "duckdb",
    "polars",
    "pyarrow",
    "fsspec",
    "tqdm",
]
dev = [
    "pytest",
    "duckdb",
    "polars",
    "pyarrow",
    "fsspec",
    "tqdm",
]

[tool.setuptools.packages.find]
include = ["pbg_emitters*"]
